SERVER-42858 Index cursor seek should not append RecordID to saved KeyString